sass/stylesheets/sass/_screen.scss
/* ... */
.overlay-dialogue {
	position: absolute;
	z-index: 1000;
	padding: 17px 10px 10px;
	background-color: $ui-bg-color;
	border: 1px solid $overlay-border-color;
	border-bottom-color: darken($overlay-border-color, 1%);
	box-shadow: 0 4px 20px 0 $action-shadow-color;

	.overlay-dialogue-header {
		margin: -8px -10px 6px -10px;
		padding: 8px 10px;
		display: flex;

		.btn-icon {
			@extend %button-size-medium;
		}

		.btn-overlay-close {
			@extend %icon-small;
		}

		.btn-icon,
		.btn-overlay-close {
			position: initial;
			margin-top: -9px;
			margin-left: 4px;

			&:last-child {
				margin-right: -6px;
			}
		}

		h4 {
			color: widget-head-font-color($font-color);
			font-weight: bold;
			margin-right: auto;
		}

		& > ul {
			margin: -8px -10px -10px 10px;
		}
	}

	&.modal {
		position: fixed;
		overflow: hidden;
		margin: 0 10px;
		padding: 13px 10px 10px;

		.overlay-dialogue-header {
			margin-bottom: 12px;
		}

		.overlay-dialogue-body {
			overflow-y: auto;
			overflow-x: hidden;
			width: 100%;
			max-height: calc(100vh - 220px);
			max-width: inherit;
			margin: 0 -10px 8px;
			padding: 0 10px;
			position: relative;
			@extend %webkit-scrollbar;

			form {
				padding: 2px 0;
			}

			.table-forms {
				.table-forms-td-right {
					padding-right: 8px;
				}

				.table-forms-row-with-second-field {
					position: relative;

					.table-forms-second-column {
						position: absolute;
						top: 5px;
						right: 8px;
					}
				}
			}
		}

		.overlay-dialogue-controls {
			text-align: right;
			padding: 0 0 10px;

			z-select {
				text-align: left;
				padding: inherit;

				li {
					display: block;
					padding-left: 5px;
				}
			}

			.inline-filter {
				li {
					padding-left: 0;
				}
			}
		}
	}

	// Modal sizes:
	//   modal-popup-medium: 450px - max-content
	//   modal-popup-generic: 650px - max-content
	//   modal-popup-small: max-content - 450px
	//   modal-popup-static: max-content - 700px
	//   modal-popup-preprocessing: max-content - 1024px
	//   modal-popup-large: max-content - 1024px
	//   modal-popup-fullscreen: (full_width-40px)
	&.modal-popup {
		top: 50px;
		width: var(--modal-width, 100%);
		max-width: var(--modal-max-width, 1024px);
		min-width: var(--modal-min-width, auto);

		&.modal-popup-medium {
			--modal-width: auto;
			--modal-min-width: 450px;
		}

		&.modal-popup-generic {
			--modal-width: auto;
			--modal-min-width: 650px;
		}

		&.modal-popup-small {
			--modal-max-width: 450px;
		}

		&.modal-popup-static {
			--modal-max-width: 700px;
		}

		&.modal-popup-preprocessing {
			--modal-max-width: 1024px;
		}

		&.modal-popup-fullscreen {
			--modal-width: calc(100vw - 40px);
			--modal-max-width: calc(100vw - 40px);
		}
	}

	&.hintbox {
		display: flex;
		flex-direction: column;
		box-sizing: border-box;
		overflow: hidden;
		padding-top: 20px;

		&.hintbox-position-fixed {
			position: fixed;
		}

		&:not(.hintbox-static) {
			pointer-events: none;
		}

		&.hintbox-static {
			padding-top: 0;

			.hintbox-draggable-handle {
				height: 20px;
				width: 100%;
				cursor: grab;
			}
		}

		.hintbox-container {
			overflow: auto;
			padding-bottom: 1px; // for table correct size

			@extend %webkit-scrollbar;
		}
	}

	.hintbox-raw-data {
		white-space: pre-wrap;
	}

	.hintbox-wrap,
	.hintbox-wrap-horizontal {
		overflow: auto;
		max-width: 800px;
		overflow-wrap: break-word;
		@extend %webkit-scrollbar;
	}

	.hintbox-wrap {
		max-height: 240px;
	}

	.msg-bad,
	.msg-good,
	.msg-warning {
		position: -webkit-sticky;
		position: sticky;
		top: 0;
		z-index: 4;
		margin: 0 0 10px;
	}

	.form-grid {
		// 100px label column width for use in popup forms.
		grid-template-columns: minmax(var(--label-width, 100px), max-content) 1fr;

		&.form-grid-1-1 {
			grid-template-columns: repeat(2, minmax(100px, max-content) 1fr);
		}

		&.form-grid-3-1 {
			grid-template-columns: minmax(100px, max-content) 3fr max-content auto;
		}
	}

	.list-table {
		white-space: normal;
		border: 0;
	}

	.table-paging {
		border: 0;
		border-top: 1px solid $table-border-color;
	}

	.table-forms-td-right {
		td {
			label {
				display: block;
			}
		}
	}

	#lldoperation_form {
		.table-forms-td-right:has(z-textarea-flexible) {
			display: flex;
			align-items: flex-start;
		}
	}

	.maps-container {
		max-height: 128px;
		overflow-y: auto;
		margin-left: -10px;
		@extend %webkit-scrollbar;
	}

	.table-forms-second-column {
		float: right;
		line-height: 24px;
	}
}

// Multiline input control.
.multilineinput-control {
	display: flex;
	width: 100%;

	input[type=text] {
		overflow: hidden;
		cursor: pointer;
		white-space: nowrap;
		text-overflow: ellipsis;
		border-right: 0;
		width: 100%;

		&[readonly] {
			background: $form-bg-color !important;
			border-color: $form-border-color;
			color: $form-font-color;
		}

		&.monospace-font {
			padding-top: 1px;
		}
	}

	&.editable {
		background-color: $form-bg-color !important;
		border-color: $form-disabled-font-color;
	}

	button {
		position: relative;
		min-width: 24px;
		margin-right: 1px;
		border-top-left-radius: 0;
		border-bottom-left-radius: 0;

		&:not([disabled]):not([readonly]) {
			background-color: $form-bg-color;
			border-color: $form-border-color;

			&:hover {
				background-color: $btn-form-hover-bg-color;
			}
		}
	}

	&.multilineinput-readonly {
		input[type=text][readonly] {
			background-color: $form-disabled-bg-color !important;
		}
	}

	&.multilineinput-disabled {
		input[type=text] {
			cursor: default;
		}

		button::after {
			opacity: .5;
		}
	}

	button.zi-pencil {
		&::before {
			color: $icon-color;
		}
	}
}
/* ... */

